--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ a:hover { color: #32C6FF; }
 .table-go { display: table; height: 100%; }
 .table-tr { display: table-row; }
 #table-links { height: auto; width: 100%; }
+#table-search { height: auto; width: 100%; }
+#table-footer { height: auto; width: 100%; }
 
 #menu {
     width: 100%; cursor: default;
@@ -69,4 +71,48 @@ a:hover { color: #32C6FF; }
     #menu ul ul li .icon img {
         display: block; max-width: 16px; max-height: 16px; visibility: hidden;
         position: absolute; bottom: 0; left: 50%; transform: translateX(-50%);
+    }
+
+    #date { }
+
+    .table-footer {
+        margin: 5px;
+        padding: 10px;
+    }
+
+    .form_p {
+        margin: 5px;
+        padding: 10px;
+    }
+
+    .form_p input {
+      display: inline-block;
+      -webkit-box-sizing: content-box;
+      -moz-box-sizing: content-box;
+      box-sizing: content-box;
+      padding: 10px 20px;
+      border: 1px solid #b7b7b7;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+      font: normal 16px/normal "cantarell", Helvetica, sans-serif;
+      color: rgba(0,142,198,1);
+      -o-text-overflow: clip;
+      text-overflow: clip;
+      background: -webkit-linear-gradient(-90deg, rgba(255,255,255,1) 0, rgba(200,200,200,1) 100%);
+      background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0, rgba(200,200,200,1) 100%);
+      background: linear-gradient(180deg, rgba(255,255,255,1) 0, rgba(200,200,200,1) 100%);
+      background-position: 50% 50%;
+      -webkit-background-origin: padding-box;
+      background-origin: padding-box;
+      -webkit-background-clip: border-box;
+      background-clip: border-box;
+      -webkit-background-size: auto auto;
+      background-size: auto auto;
+      -webkit-box-shadow: 5px 5px 8px 2px rgba(0,0,0,0.4) ;
+      box-shadow: 5px 5px 8px 2px rgba(0,0,0,0.4) ;
+      text-shadow: 1px 1px 0 rgba(0,0,0,0.25) ;
+      -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+      -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+      -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+      transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
     }
